--- a/nginx_rewrite.conf
+++ b/nginx_rewrite.conf
@@ -2,6 +2,7 @@
 rewrite ^/.well-known/(.*)$ /.well-known/$1 break;
 rewrite ^/own_lib/(.*).html$ /own_lib/$1.php break;
 rewrite ^/own_lib/(.*)$ /own_lib/$1 break;
+rewrite ^/own_static/(.*)$ /own_static/$1 break;
 #过滤一些特殊的HTML页面START
 	#如果你希望通过百度站长验证
 	rewrite ^/baidu_(.*).html$  /baidu_$1.html break;
