no longer service

--- a/nginx_rewrite.conf
+++ b/nginx_rewrite.conf
@@ -1,10 +1,4 @@
-#agent_www
-rewrite ^/.well-known/(.*)$ /.well-known/$1 break;
-rewrite ^/own_lib/(.*).html$ /own_lib/$1.php break;
-rewrite ^/own_lib/(.*)$ /own_lib/$1 break;
-rewrite ^/own_static/(.*)$ /own_static/$1 break;
-#过滤一些特殊的HTML页面START
-	#如果你希望通过百度站长验证
-	rewrite ^/baidu_(.*).html$  /baidu_$1.html break;
-#过滤一些特殊的HTML页面END
-rewrite ^.*$ /index.php break;
+## Due to the developer's copyright infringement warning, this git version is outdated and no longer be updated. Please visit the official latest github open source , https://github.com/wechaturl/Wechat_Weixin_QQ_domain_fangfeng_system_code.git
+
+## 由于被开发商版权侵权警告,版本陈旧，不再更新。请访问官方的最新github源码 https://github.com/wechaturl/Wechat_Weixin_QQ_domain_fangfeng_system_code.git
+
